HelloUltraviolet/Fixtures/RejectedSource/Patterns/RangePatternEmpty/Expected.uv
//! Expected diagnostic metadata for the RangePatternEmpty rejected-source specimen.

expectedDiagnostic("", "rule.17.RangePattern-Empty")
